tests/positive/basic/epoch_start_1970/input.ci
void main() {
    int ts = makeEpoch(1970, 1, 1, 0, 0, 0);
    print(formatDate(ts, "YYYY-MM-DD") + "\n");
}
