tests/negative/runtime/arrayset_empty_negative/input.ci
void main() {
    int[] xs = [];
    arraySet(xs, -1, 1);
}
